presentation preparation final commits

--- a/Movie_Barcode_Presentation.ipynb
+++ b/Movie_Barcode_Presentation.ipynb
@@ -25,6 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The output of a playlist processing\n",
+    "\n",
+    "\n",
     "            ├── 0_vU_m0GYmE\n",
     "            │   ├── 0_vU_m0GYmE.json\n",
     "            │   └── 0_vU_m0GYmE.png\n",
@@ -77,7 +80,7 @@
     "                ├── zUHvPgJgop8.json\n",
     "                └── zUHvPgJgop8.png\n",
     "\n",
-    "**Metada will be added on next release**"
+    "**Metada will be added on the next release**"
    ]
   },
   {
